err/django-galeria.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/admin_ordering'...
Listing './lib/python3.5/site-packages/admin_ordering/static'...
Listing './lib/python3.5/site-packages/admin_ordering/static/admin_ordering'...
Listing './lib/python3.5/site-packages/django_galeria-0.5.egg-info'...
Listing './lib/python3.5/site-packages/django_js_asset-0.1.1.dist-info'...
Listing './lib/python3.5/site-packages/django_mptt-0.9.0.dist-info'...
Listing './lib/python3.5/site-packages/galeria'...
Compiling './lib/python3.5/site-packages/galeria/EXIF.py'...
***   File "./lib/python3.5/site-packages/galeria/EXIF.py", line 1182
    y = 0L
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/galeria/locale'...
Listing './lib/python3.5/site-packages/galeria/locale/en'...
Listing './lib/python3.5/site-packages/galeria/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/galeria/locale/pt_BR'...
Listing './lib/python3.5/site-packages/galeria/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/galeria/locale/ru'...
Listing './lib/python3.5/site-packages/galeria/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/galeria/migrations'...
Compiling './lib/python3.5/site-packages/galeria/models.py'...
***   File "./lib/python3.5/site-packages/galeria/models.py", line 166
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/galeria/templates'...
Listing './lib/python3.5/site-packages/galeria/templates/galeria'...
Listing './lib/python3.5/site-packages/galeria/templates/galeria/admin'...
Listing './lib/python3.5/site-packages/galeria/templatetags'...
Compiling './lib/python3.5/site-packages/galeria/templatetags/galeria_tags.py'...
***   File "./lib/python3.5/site-packages/galeria/templatetags/galeria_tags.py", line 37
    raise template.TemplateSyntaxError, "Second argument to '%s' tag must be 'as'" % bits[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/js_asset'...
Listing './lib/python3.5/site-packages/mptt'...
Listing './lib/python3.5/site-packages/mptt/locale'...
Listing './lib/python3.5/site-packages/mptt/locale/da'...
Listing './lib/python3.5/site-packages/mptt/locale/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/de'...
Listing './lib/python3.5/site-packages/mptt/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/dk'...
Listing './lib/python3.5/site-packages/mptt/locale/dk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/es'...
Listing './lib/python3.5/site-packages/mptt/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/es_AR'...
Listing './lib/python3.5/site-packages/mptt/locale/es_AR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/fi'...
Listing './lib/python3.5/site-packages/mptt/locale/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/fr'...
Listing './lib/python3.5/site-packages/mptt/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/hu'...
Listing './lib/python3.5/site-packages/mptt/locale/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/mn'...
Listing './lib/python3.5/site-packages/mptt/locale/mn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/nb'...
Listing './lib/python3.5/site-packages/mptt/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/pl'...
Listing './lib/python3.5/site-packages/mptt/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/pt_BR'...
Listing './lib/python3.5/site-packages/mptt/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/ru'...
Listing './lib/python3.5/site-packages/mptt/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/uk'...
Listing './lib/python3.5/site-packages/mptt/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/locale/zh_Hant'...
Listing './lib/python3.5/site-packages/mptt/locale/zh_Hant/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mptt/static'...
Listing './lib/python3.5/site-packages/mptt/static/mptt'...
Listing './lib/python3.5/site-packages/mptt/templates'...
Listing './lib/python3.5/site-packages/mptt/templates/admin'...
Listing './lib/python3.5/site-packages/mptt/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/testapp'...
Listing './share'...
Listing './share/python-wheels'...
